--- a/style.css
+++ b/style.css
@@ -2,32 +2,74 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.container{
-    width: 600px;
-    margin:60px auto;
-    display: flex;
-    gap: 25px;
+@media(min-width: 600px) {
+
+    .container{
+        width: 600px;
+        margin:60px auto;
+        display: flex;
+        gap: 25px;
+    }
+    
+    .content{
+        padding-bottom: 25px;
+        /* border: 1px solid black; */
+        /* width: 500px; */
+        /* display: flex;
+        justify-content: center;
+        align-items: center; */
+    }
+    
+    img{
+        transition: .3s;
+        object-fit: cover;  /* for fitting the image */
+        border-radius: 12px;
+    }
+    
+    .btn{
+        transition: .3s;
+        background-color: black;
+        color: white;
+        padding: 16px 30px;
+        font-size: 16px;
+        border: none;
+        border-radius: 12px;
+    }
 }
 
-.content{
-    padding-bottom: 25px;
-    /* border: 1px solid black; */
-    /* width: 500px; */
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-}
-
-img{
-    object-fit: cover;  /* for fitting the image */
-    border-radius: 12px;
-}
-
-.btn{
-    background-color: black;
-    color: white;
-    padding: 16px 30px;
-    font-size: 16px;
-    border: none;
-    border-radius: 12px;
+@media(max-width: 600px) {
+    .container{
+        /* width: 600px; */
+        margin:60px auto;
+        text-align: center;
+        /* display: flex;
+        gap: 25px; */
+    }
+    
+    .content{
+        padding-bottom: 25px;
+        /* border: 1px solid black; */
+        /* width: 500px; */
+        /* display: flex;
+        justify-content: center;
+        align-items: center; */
+    }
+    
+    img{
+        transition: .3s;
+        width: 160px;
+        height: 160px;
+        object-fit: cover;  /* for fitting the image */
+        border-radius: 50%;
+    }
+    
+    .btn{
+        transition: .3s;
+        background-color: black;
+        color: white;
+        padding: 16px 30px;
+        font-size: 16px;
+        border: none;
+        border-radius: 60px;
+    }
 }
